gcc/testsuite/g++.dg/parse/typename9.C
struct A { typedef int X; };

int i = typename A::X(); // { dg-error "typename" }
